# parcial-procesamiento-imagenes

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/parcial/: CameraActivity.java  MainActivity.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
